--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.fc9607a9.png">
     <link rel="shortcut icon" href="favicon.f9ddfcf4.ico?v2">
 
-    <script src="demo.d92f686b.js"></script>
+    <script src="demo.b0652d24.js"></script>
     <link rel="stylesheet" type="text/css" href="style.a503a803.css">
     <script>window.addEventListener('DOMContentLoaded', _ => {
   document.body.classList.add('loaded');
@@ -285,6 +285,17 @@
                     <b-label badge="orange">Orange</b-label>&nbsp;
                     <b-label badge="green">Green</b-label>&nbsp;
 
+                </section>
+
+                <section title="Avatar">
+                    <h1>Avatar</h1>
+
+                    <b-avatar initials="KJ" size="40"></b-avatar>
+                    <b-avatar initials="BT" size="40"></b-avatar>
+                    <b-avatar initials="JD" size="40"></b-avatar>
+                    <b-avatar initials="KJ" bgd="#E91E63" size="40"></b-avatar>
+                    <b-avatar gravatar="6bd69795f929a40746cdf026a03b703e" size="40"></b-avatar>
+                    <b-avatar url="https://i.imgur.com/6QKG2AG.png" size="40"></b-avatar>
                 </section>
 
                 <section title="Spinner">
