--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="shortcut icon" href="favicon.f9ddfcf4.ico?v2">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <script src="demo.6ecb12ab.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.82e1b2bb.css">
+    <script src="demo.d0e575fe.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.51615803.css">
     <script>window.addEventListener('DOMContentLoaded', _ => {
   document.body.classList.add('loaded');
 });</script>
@@ -61,13 +61,23 @@
 
                     <form-handler>
 
-                        <form-control material="filled" label="Text Field">
-                            <text-field></text-field>
-                        </form-control>
+                        <div class="cols-3">
+                            <form-control material="filled" label="Name">
+                                <input slot="control" type="text" autocomplete="name">
+                            </form-control>
+
+                            <form-control material="filled" label="Email">
+                                <input slot="control" type="email">
+                            </form-control>
+
+                            <form-control material="filled" label="Phone">
+                                <input slot="control" type="tel">
+                            </form-control>
+                        </div>
 
                         <div class="cols-3">
                             <form-control material="filled" label="Validate and prefix" prefix="$">
-                                <text-field validate="decimal"></text-field>
+                                <text-field validate="decimal" max="2"></text-field>
                             </form-control>
 
                             <form-control material="filled" label="Validate and suffix" suffix=" units">
