--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="favicon.f9ddfcf4.ico?v2">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <script src="demo.3456da84.js"></script>
+    <script src="demo.774c17c0.js"></script>
     <link rel="stylesheet" type="text/css" href="style.51615803.css">
     <script>window.addEventListener('DOMContentLoaded', _ => {
   document.body.classList.add('loaded');
@@ -384,6 +384,22 @@
                     <b-label badge="red" dot=""></b-label>&nbsp;
                     <b-label badge="red">1</b-label>&nbsp;
                     <b-label badge="red">24</b-label>&nbsp;
+
+
+                    <br><br>
+
+                    <br><br>
+                    <h1>Ribbon</h1>
+
+                    <b-paper style="height: 120px">
+                        <b-ribbon>Ribbon</b-ribbon>
+                        <b-empty-state>Default</b-empty-state>
+                    </b-paper>
+
+                    <b-paper style="height: 140px">
+                        <b-ribbon pos="right" style="--color:var(--pink);font-size:1.4em;">Ribbon</b-ribbon>
+                        <b-empty-state>Right, color and size change</b-empty-state>
+                    </b-paper>
 
                 </section>
 
