--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="favicon.f9ddfcf4.ico?v2">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <script src="demo.41629636.js"></script>
+    <script src="demo.260f37c2.js"></script>
     <link rel="stylesheet" type="text/css" href="style.927fbb3c.css">
     <script>window.addEventListener('DOMContentLoaded', _ => {
   document.body.classList.add('loaded');
@@ -211,19 +211,19 @@
                     <h1>Panels</h1>
 
                     <div>
-                        <a href="/#/view-1" onclick="openView(this)">Default Panel view</a>
+                        <a href="view-1" onclick="openView(this)">Default Panel view</a>
                     </div><br>
 
                     <div>
-                        <a href="/#/view-2-small" onclick="openView(this)">Custom sizing and anchor</a>
+                        <a href="view-2-small" onclick="openView(this)">Custom sizing and anchor</a>
                     </div><br>
 
                     <div>
-                        <a href="/#/view-3" onclick="openView(this)">Inside another view</a>
+                        <a href="view-3" onclick="openView(this)">Inside another view</a>
                     </div><br>
 
                     <div>
-                        <a href="/#/view-animate" onclick="openView(this)">Animate</a>
+                        <a href="view-animate" onclick="openView(this)">Animate</a>
                     </div><br>
 
                     <div>
