--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="favicon.f9ddfcf4.ico?v2">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <script src="demo.260f37c2.js"></script>
+    <script src="demo.cf90959f.js"></script>
     <link rel="stylesheet" type="text/css" href="style.927fbb3c.css">
     <script>window.addEventListener('DOMContentLoaded', _ => {
   document.body.classList.add('loaded');
@@ -47,7 +47,7 @@
             <span slot="menu:after">
                 <b-btn pill="" color="black" onclick="location='https://www.npmjs.com/package/blackstone-ui'">Install</b-btn>
                 &nbsp;&nbsp;
-                <b-btn pill="" color="blue" onclick="location='./docs'">Documentation</b-btn>
+                <b-btn pill="" color="blue" onclick="location='/docs'">Documentation</b-btn>
             </span>
 
             <h2 slot="menu:Presenters"><b-icon name="window"></b-icon>Presenters</h2>
